bin/tests/snapshots/redundant_pattern_bind__01ae2aa8e74bbccf70f47469dad2c734_fix.snap
---
source: bin/tests/redundant_pattern_bind.rs
---
{ ... } @ inputs: null
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ ... } @ inputs: null
+inputs: null
