bin/tests/snapshots/redundant_pattern_bind__01ae2aa8e74bbccf70f47469dad2c734_lint.snap
---
source: bin/tests/redundant_pattern_bind.rs
---
{ ... } @ inputs: null
---
[redundant_pattern_bind] Warning: Found redundant pattern bind in function argument
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ { ... } @ inputs: null
   │ ────────┬───────  
   │         ╰───────── This pattern bind is redundant, use inputs instead
───╯
