bin/tests/snapshots/redundant_pattern_bind__01ae2aa8e74bbccf70f47469dad2c734_lint_errfmt.snap
---
source: bin/tests/redundant_pattern_bind.rs
---
{ ... } @ inputs: null
---
<temp_file_path>>1:1:W:11:[redundant_pattern_bind] This pattern bind is redundant, use `inputs` instead
