bin/tests/snapshots/redundant_pattern_bind__fix_01ae2aa8e74bbccf70f47469dad2c734944f7d3e39cd86cce214566a1fca2c0f.snap
---
source: bin/tests/redundant_pattern_bind.rs
---
expression:
{ ... } @ inputs: null
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ ... } @ inputs: null
+inputs: null
