bin/tests/snapshots/redundant_pattern_bind__fix_1b30ce9a6aaa378f171915470f08b810c07036b1a6740944986da0010a76bd30.snap
---
source: bin/tests/redundant_pattern_bind.rs
---
{ ... } @ inputs: null

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ ... } @ inputs: null
+inputs: null
