bin/tests/snapshots/redundant_pattern_bind__lint_01ae2aa8e74bbccf70f47469dad2c734944f7d3e39cd86cce214566a1fca2c0f.snap
---
source: bin/tests/redundant_pattern_bind.rs
expression: snapshot
---
expression:
{ ... } @ inputs: null
---
[W11] Warning: Found redundant pattern bind in function argument
   ╭─[<temp_file_path>:1:1]
   │
 1 │ { ... } @ inputs: null
   · ────────┬───────  
   ·         ╰───────── This pattern bind is redundant, use inputs instead
───╯
