bin/tests/snapshots/redundant_pattern_bind__lint_1b30ce9a6aaa378f171915470f08b810c07036b1a6740944986da0010a76bd30.snap
---
source: bin/tests/redundant_pattern_bind.rs
---
{ ... } @ inputs: null

---
[W11] Warning: Found redundant pattern bind in function argument
   ╭─[<temp_file_path>:1:1]
   │
 1 │ { ... } @ inputs: null
   · ────────┬───────  
   ·         ╰───────── This pattern bind is redundant, use inputs instead
───╯
